--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/github.ico><title>vue-github</title><link href=/js/chunk-2d0ced65.b1455b8c.js rel=prefetch><link href=/js/chunk-2d216230.276a3f59.js rel=prefetch><link href=/js/chunk-2d23118b.36011196.js rel=prefetch><link href=/css/app.b2d7f89e.css rel=preload as=style><link href=/js/app.ae8e5cb0.js rel=preload as=script><link href=/js/chunk-vendors.de9316e4.js rel=preload as=script><link href=/css/app.b2d7f89e.css rel=stylesheet></head><body><noscript><strong>We're sorry but vue-github doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div class=app-container></div><script src=/js/chunk-vendors.de9316e4.js></script><script src=/js/app.ae8e5cb0.js></script></body></html>
+<!DOCTYPE html>
+<html lang=en>
+<head>
+  <meta charset=utf-8>
+  <meta http-equiv=X-UA-Compatible content="IE=edge">
+  <meta name=viewport content="width=device-width,initial-scale=1">
+  <link rel=icon href=/vue-github/github.ico>
+  <title>vue-github</title>
+  <link href=/vue-github/js/chunk-2d0ced65.b1455b8c.js rel=prefetch>
+  <link href=/vue-github/js/chunk-2d216230.276a3f59.js rel=prefetch>
+  <link href=/vue-github/js/chunk-2d23118b.36011196.js rel=prefetch>
+  <link href=/vue-github/css/app.b2d7f89e.css rel=preload as=style>
+  <link href=/vue-github/js/app.edaa7e95.js rel=preload as=script>
+  <link href=/vue-github/js/chunk-vendors.de9316e4.js rel=preload as=script>
+  <link href=/vue-github/css/app.b2d7f89e.css rel=stylesheet>
+</head>
+<body>
+<noscript><strong>We're sorry but vue-github doesn't work properly without JavaScript enabled. Please enable it to
+  continue.</strong></noscript>
+<div class=app-container></div>
+<script src=/vue-github/js/chunk-vendors.de9316e4.js></script>
+<script src=/vue-github/js/app.edaa7e95.js></script>
+</body>
+</html>
